<resources>
    <string name="app_name">MadLevel7Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_screen_title">Welcome to the HvA Locations Quest!</string>
    <string name="home_screen_description">
        After pressing start you will start the quest.
        After each question a picture of a HvA building is shown.
        Go to the building and start the next question.
        At the end there will be a prize waiting for you!
    </string>
    <string name="hva_image_content_description">
        This an image which depicts a building of the
        Hogeschool van Amsterdam
    </string>
    <string name="btn_start_quest">Start quest</string>
    <string name="btn_confirm">Confirm</string>
    <string name="question_progress_count">%d/%d</string>
    <string name="question_placeholder">Question</string>
    <string name="answer1_placeholder">Answer 1</string>
    <string name="answer2_placeholder">Answer 2</string>
    <string name="answer3_placeholder">Answer 3</string>
    <string name="wrong_answer">Wrong answer, try again!</string>
    <string name="quest_complete">Congratulations, you have completed the Locations Quest!</string>
</resources>