<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionFragment">

    <TextView
        android:id="@+id/tvQuestionProgressCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/question_progress_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionProgressCount">

        <TextView
            android:id="@+id/tvQuestionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_placeholder" />

        <RadioGroup
            android:id="@+id/rgAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1_placeholder" />

            <RadioButton
                android:id="@+id/rbAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2_placeholder" />

            <RadioButton
                android:id="@+id/rbAnswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3_placeholder" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>